--- a/notebooks/polished/no-drug-homogeneous-phase-transition-correlation.ipynb
+++ b/notebooks/polished/no-drug-homogeneous-phase-transition-correlation.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "6a9dea78",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
    "source": [
     "A = np.stack(experiment_As, axis=0)\n",
     "experiment_As[0].shape\n",
-    "A.shape#  = (num_networks, num_initial_conditions, 2, network_size)"
+    "A.shape#  = (num_experiments, num_networks, num_initial_conditions, 2, network_size)"
    ]
   },
   {
