--- a/notebooks/polished/no-drug-homogeneous-phase-transition.ipynb
+++ b/notebooks/polished/no-drug-homogeneous-phase-transition.ipynb
@@ -61,19 +61,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "1add1c17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIRECTORY = pathlib.Path('../../data/no-drug-homogeneous-phase-transition/')\n",
+    "RESULTS_DIRECTORY = pathlib.Path('../../data/no-drug-homogeneous-phase-transition/N50000-demo/raw/')\n",
     "experiments: List[pb.Experiment] = []\n",
+    "t = 2\n",
     "# Read the existing address book.\n",
     "for protobuf_file in RESULTS_DIRECTORY.glob('*.pb'):\n",
     "  with protobuf_file.open('rb') as f:\n",
     "    experiment = pb.Experiment()\n",
     "    experiment.ParseFromString(f.read())\n",
-    "    experiments.append(experiment)"
+    "    experiments.append(experiment)\n",
+    "    t -= 1\n",
+    "    if t <= 0: break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3f180c17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "num_networks: 20\n",
+       "dynamics_config {\n",
+       "  num_steps: 100\n",
+       "  num_initial_conditions: 10\n",
+       "  initial_condition_correlation: 0.99\n",
+       "}\n",
+       "network_config {\n",
+       "  network_size: 50000\n",
+       "  expected_connectivity: 14.5\n",
+       "  poisson_out_degree_distribution {\n",
+       "    lambda: 14.5\n",
+       "  }\n",
+       "}\n",
+       "drug_config {\n",
+       "}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiments[1].experiment_config"
    ]
   },
   {
@@ -91,27 +129,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "num_networks: 100\n",
-       "dynamics_config {\n",
-       "  num_steps: 30\n",
-       "  num_initial_conditions: 20\n",
-       "}\n",
-       "network_config {\n",
-       "  network_size: 500\n",
-       "  expected_connectivity: 2.5\n",
-       "  poisson_out_degree_distribution {\n",
-       "    lambda: 2.5\n",
-       "  }\n",
-       "}\n",
-       "drug_config {\n",
-       "}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m control_experiment \u001b[38;5;241m=\u001b[39m \u001b[43mexperiments\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Note that homogeneously distributed networks have type 0.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m control_experiment\u001b[38;5;241m.\u001b[39mexperiment_config\u001b[38;5;241m.\u001b[39mnetwork_config\u001b[38;5;241m.\u001b[39mout_degree_distribution_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnetwork should be homogeneous\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
